2013-02-01  Andreas Kupries  <andreas_kupries@users.sourceforge.net>

	*
	* Released and tagged Tcllib 1.15 ========================
	* 

2011-12-13  Andreas Kupries  <andreas_kupries@users.sourceforge.net>

	*
	* Released and tagged Tcllib 1.14 ========================
	* 

2011-01-24  Andreas Kupries  <andreas_kupries@users.sourceforge.net>

	*
	* Released and tagged Tcllib 1.13 ========================
	* 

2009-12-07  Andreas Kupries  <andreas_kupries@users.sourceforge.net>

	*
	* Released and tagged Tcllib 1.12 ========================
	* 

2009-10-27  Andreas Kupries  <andreask@activestate.com>

	* fa.man: Noted that the implementation could be simplified by
	* fa.tcl: using snit's hierarchical methods. The changed methods
	* pkgIndex.tcl: are 'start', 'final', 'symbol', and 'state'.
	* tests/fa_final.test: Updated the testsuite, the error messages
	* tests/fa_state.test:  changed across branches of Tcl. Bumped
	* tests/fa_symbol.test: version to 0.4 (Due to us bumping the
	  required snit to 1.3+).

2009-02-13  Andreas Kupries  <andreask@activestate.com>

	* fa.tcl: Fixed [SF Tcllib Bug 2595296], renaming of states
	* fa.man: having loop transitions. Bumped version to 0.3.1.
	* pkgIndex.tcl: Extended testsuite.
	* tests/fa_state.test:

2008-12-12  Andreas Kupries  <andreas_kupries@users.sourceforge.net>

	*
	* Released and tagged Tcllib 1.11.1 ========================
	* 

2008-10-16  Andreas Kupries  <andreas_kupries@users.sourceforge.net>

	*
	* Released and tagged Tcllib 1.11 ========================
	* 

2008-03-14  Andreas Kupries   <andreask@activestate.com>

	* faop.tcl (::grammar::fa::op::cons): Fixed bad return code,
	* pkgIndex.tcl: reported in [SF Tcllib Bug 1826418], by Erik
	* faop.man: Leunissen. Bumped to version 0.4.1.

2007-12-03  Andreas Kupries  <andreask@activestate.com>

	* tests/faop_regex.test: Added examples for to(Tcl)Regexp provided
	  by Lars Hellstroem <lars_h@users.sourceforge.net>, see [Tcllib SF
	  Bug 1841979].
